--- a/DigitalSpotify/DigitalSpotify.vcxproj
+++ b/DigitalSpotify/DigitalSpotify.vcxproj
@@ -75,14 +75,14 @@
     <OutDir>../output/release/</OutDir>
     <IntDir>../log/release/</IntDir>
     <IncludePath>$(SolutionDir)\DigitalSpotify\hooks\minhook\headers\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\DigitalSpotify\hooks\minhook\libs\;$(LibraryPath)</LibraryPath>
     <TargetName>patcher</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>../output/debug/</OutDir>
     <IntDir>../log/debug/</IntDir>
     <IncludePath>$(SolutionDir)\DigitalSpotify\hooks\minhook\headers\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\DigitalSpotify\hooks\minhook\libs\;$(LibraryPath)</LibraryPath>
     <TargetName>patcher</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -160,27 +160,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="hooks\hooks.h" />
-    <ClInclude Include="hooks\minhook\headers\buffer.h" />
-    <ClInclude Include="hooks\minhook\headers\hde\hde32.h" />
-    <ClInclude Include="hooks\minhook\headers\hde\hde64.h" />
-    <ClInclude Include="hooks\minhook\headers\hde\pstdint.h" />
-    <ClInclude Include="hooks\minhook\headers\hde\table32.h" />
-    <ClInclude Include="hooks\minhook\headers\hde\table64.h" />
     <ClInclude Include="hooks\minhook\headers\MinHook.h" />
-    <ClInclude Include="hooks\minhook\headers\trampoline.h" />
     <ClInclude Include="includes.h" />
-    <ClInclude Include="utils\color.h" />
     <ClInclude Include="utils\utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="hooks\hooks.cpp" />
-    <ClCompile Include="hooks\minhook\headers\buffer.c" />
-    <ClCompile Include="hooks\minhook\headers\hde\hde32.c" />
-    <ClCompile Include="hooks\minhook\headers\hde\hde64.c" />
-    <ClCompile Include="hooks\minhook\headers\hook.c" />
-    <ClCompile Include="hooks\minhook\headers\trampoline.c" />
     <ClCompile Include="utils\utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="hooks\minhook\libs\MinHook.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
