--- a/DigitalSpotify/DigitalSpotify.vcxproj.filters
+++ b/DigitalSpotify/DigitalSpotify.vcxproj.filters
@@ -27,30 +27,6 @@
     <ClInclude Include="hooks\minhook\headers\MinHook.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\hde\hde32.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\hde\hde64.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\hde\pstdint.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\hde\table32.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\hde\table64.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\buffer.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hooks\minhook\headers\trampoline.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="utils\color.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -62,20 +38,8 @@
     <ClCompile Include="utils\utils.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="hooks\minhook\headers\hde\hde32.c">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="hooks\minhook\headers\hde\hde64.c">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="hooks\minhook\headers\buffer.c">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="hooks\minhook\headers\hook.c">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="hooks\minhook\headers\trampoline.c">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="hooks\minhook\libs\MinHook.lib" />
   </ItemGroup>
 </Project>
